src/test/deca/syntax/valid/include_pars_01.deca
// Description:
//    Programme minimaliste include.
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

#include "commentaire_pars_01.deca"