src/test/deca/syntax/invalid/include_lex_0.deca
// Description:
//    tests de programme incorrect lexicalement (include non terminé)
//
// Resultats:
//    Ligne 11 : Erreur, include incorrect
//
//
// Historique:
//    cree le 03/01/2023

include